fix: text not centered

--- a/src/components/presentational/FetchingHobbiesSpinner.css
+++ b/src/components/presentational/FetchingHobbiesSpinner.css
@@ -14,4 +14,6 @@ https://codepen.io/arxyz/pen/NMYEyX?page=4
 .FetchingHobbiesSpinner h2 {
   position: absolute;
   top: 30%;
+  left: 0;
+  right: 0;
 }
